# hotmic

./: .gitignore  README.md  build.gradle  settings.gradle
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/io/github/emaccaull/hotmic/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: audio-engine.cc  audio-engine.h  blocking-queue.h  jni-bridge.cc  logging_macros.h  ringbuffer.h
app/src/main/java/io/github/emaccaull/hotmic/: App.kt  AudioDevice.kt  AudioDeviceArrayAdapter.kt  AudioDeviceInfo.kt  AudioDeviceRepository.kt  AudioEngine.java  AudioProperties.kt  AudioSourceFilter.kt  DefaultAudioDeviceRepository.kt  IAudioEngine.java  MainActivity.kt  MainViewModel.kt
app/src/main/java/io/github/emaccaull/hotmic/di/: AppModule.kt
app/src/main/java/io/github/emaccaull/hotmic/level/: Dbfs.kt  PeakMeterView.kt
app/src/main/res/layout/: activity_main.xml  audio_device_item.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/io/github/emaccaull/hotmic/: ExampleUnitTest.kt  FakeAudioDeviceRepository.kt  FakeAudioEngine.kt  InstantTaskExecutorExtension.kt  ItemObserver.kt  MainViewModelTest.kt
gradle/wrapper/: gradle-wrapper.properties
